Made space between graphs bigger. Due to a Flotr2 issue, The left border on the summary graph doesn't show up. So I decided to take the side borders off, and just leave the top and bottom. The summary graph is the same width as the top detail graph. The tabs are better, but they will still wrap to the page once the side of the page touches the edge (or thereabouts) of the tab.

--- a/ampweb/static/css/global.css
+++ b/ampweb/static/css/global.css
@@ -15,6 +15,8 @@ body {
     float: left;
     margin-left: -43px;
     position: relative;
+    whitespace: nowrap;
+    display:inline-block;
 }
 .icon {
     cursor: pointer;
@@ -28,14 +30,16 @@ body {
 #graph {
     background-color:white;
     border: 3px solid #0F0F0F;
-    width: 800px;
+    width: 800px;   
     height: 400px;
     float: left;
     padding: 3em;
     margin-left: 1em;
+    display: inline-block;
 }
 #choices {
     padding: 2%;
+    padding-top: 0;
 }
 #graph_controls {
     float: right;
@@ -58,14 +62,15 @@ body {
 }
 .detail {
     background-color: #FFFFFF;
-    border-bottom: 2px solid #505050;
-    margin-bottom: 0.25em;
-    padding: 0.25em;
+    margin-bottom: 1.5em;
 }
 
 .summary {
     background-color: #FFFFFF;
-    padding: 0.75em;
+    padding: 1em;
+    padding-left: 2.5em;
+    width: 760px;
+
 }
 
 .header {
